--- a/content/english/blog/post-2.Rmd
+++ b/content/english/blog/post-2.Rmd
@@ -28,22 +28,67 @@ library(ggrepel)
 library(tidyverse)
 library(scales)
 library(ggpubr)
+library(plotly)
 ```
+
+ 
+### Media
+
+[Notación](https://www.geeksforgeeks.org/central-tendency-in-r-programming/#:~:text=Central%20Tendency%20is%20one%20of,centre%20value%20of%20the%20distribution.)
+
+ 
+ Explicación tabla de frecuancia.
+ 
+```{r}
+# Defining vector
+x <- c(3, 7, 5, 13, 20, 23, 39, 23, 40,
+	23, 14, 12, 56, 23, 29, 56, 37,
+	45, 1, 25, 8, 56, 56)
+
+# Generate frequency table
+y <- table(x)
+
+# Print frequency table
+print(y)
+
+# Mode of x
+m <- names(y)[which(y == max(y))]
+
+# Print mode
+print(m)
+
+```
+
+
 
 ### Correlación entre Salario medio y participación de la Mujer en empleo.
 
 
+Ejempo 1 Estimación de medidas de tendencia central básicas. 
+
+
 #### Carreras más populares por categoria.
 
-```{r, message = FALSE, warning = FALSE, fig.width=10, fig.height=6}
+```{r, message = FALSE, warning = FALSE, fig.width=10, fig.height=6, include= false}
 
-
-
-library(plotly)
 theme_set(theme_light())
+
+# Cargamos los datos.
 
 graduados<-readRDS("graduados.rds")
 
+# Exploración básica para conocer la estructura.
+
+glimpse(graduados)
+
+# Tipo de estructura de datos: Corte transversal (un momento en el tiempo).
+
+# Con 64 observaciones. 21 variables.  Este formato de observacion por renglon y variable por columna lo denominaresmo -tidy data- o datos organizados con estructura estándar.
+
+# Visualización  Scatter con trend para  4 features.  X= Proporcion mujeres/hombres por categoria, Y=mediana del salario, Categoria en color y otra Categoria en point size.
+
+## Observamos variables numéricas, (denotadas int o dbl según sean numeros enteros o decimales), categóricas (denotadas fct).  Otro tipo de datos que no esta presente paro es comun es chr, (string de texto, ejemplo nombre de países, calles, etc.)
+ 
   g<-ggplot(graduados,aes(ShareWomen,Median, color=Area,size=Sample_size, label=Major))+
   geom_point()+
   geom_smooth(aes(group=1),method = "lm")+
