--- a/content/english/blog/post-2.Rmd
+++ b/content/english/blog/post-2.Rmd
@@ -29,26 +29,83 @@ library(tidyverse)
 library(scales)
 library(ggpubr)
 library(plotly)
+library(foreign)
 ```
 
+
+
+> ### Software Setup (Installation).
+
+![](/images/blog/r.jpg)
+
+
+1. On wndows: [download](http://cran.cnr.berkeley.edu/)
+2. Mac [download](http://cran.cnr.berkeley.edu/)
+
+R studio 
+
+3. Windows and Mac [download](https://www.rstudio.com/products/rstudio/download/#download)
+
+![](/images/blog/installrstudio.png) 
+
+### A. Nociones Teóricas
+
+#### 1. Procesos de análisis replicables.
+
+¿Qué son los procesos de análisis replicable?
+
+En la realización de análisis estadístico  partimos de una pregunta, generalmente un problema que deseamos resolver. Para resolverlo aplicamos una serie de técnicas para analizar información. Dos fases comunes en  este proceso son el **Analisis exploratorio de datos y el análisis inferencial**.   
+
+Una vez que recorremos este proceso y respondemos el questionamiento inicial, la evidencia aportada con el análisis estadístico involucra el surgimietno de nuevas preguntas.
+
+![](/images/blog/q.jpeg){width=40%}
+
+
+Una característica de este proceso es que es iterativo, es realidad estamos frente a un proceso ciclo. El work flow se repite constantemente. 
+
+Sería muy interesante y valioso que los recursos invertidos en términos de tiempo para la solución de un problema pudiesen recurperarse, si, reutilizarse! 
+
+![](/images/blog/recycle.png){width=40%}
+
+
+De esta forma optimizariamos el uso de nuestros recursos. 
+
+La forma de hacer este uso óptimo en términos de análisis estadístico de datos es utilizando proceso **replicables**.
+
+Piense en las operaciones que comunmente se hacen en *Excel* por ejemplo. Una vez que se finaliza con una estimación se guarda el archivo y cuando se require hacer un análisis nuevo se abre otro archivo a pesar de que se usan funciones similares para aproximar el cálculo se trabaja doble ya que no se tiene un registro que documente nuestro trabajo paso a paso.
+
+A media que se hacen análisis de mayor complejidad o con un volumen de datos de mayor escala, se hace evidente la necesidad de documentar el proceso de análisis para su repoducción futura. 
+
+El entorno de análisis con plataformas como **R studio** esta diseñado explicitamente para permitir la **replicabilidad** del proceso de análisis. 
+
+#### 1.2 RStudio vs. STATA, SPSS y EXCEL.
+
+![](/images/blog/logos.jpeg){width=80%}
+La principal ventaja de **R** sobre otros paquetes disponibles en el mercado actualmente es la flexibilidad del entorno *OPEN SOURCE*. Una gran comunidad de usuarios, desarrolla y comparte las herramientas que integran R de foma contínua.
+
+Otra ventajas incluyen: 
+
++ Integración de código  (lenguaje R).
+    
++ Explicitamente incorpora la perspectiva de análisis estadístico y  permite la representación gráfica dinámica (ej. Shiny apps).
+    
++ Generación de reportes endiversos formatos, como HTML, PDF,etc.No solo word.
+
++ Manejo de grandes volumenes de datos (base de datos que contienen millones de registros (individuos, observaciones...)
+
++ Plataforma que permite  utilizar herramientaspara visualización (ej.paquete ggplot2)
+
+             
+
+[Ejemplos de uso de R para análisis estadístico](https://insight4health.netlify.app/)
+
+
+
+
+
+### Frecuencia.
  
-### Media
-
-[Notación](https://www.geeksforgeeks.org/central-tendency-in-r-programming/#:~:text=Central%20Tendency%20is%20one%20of,centre%20value%20of%20the%20distribution.)
-
-Ejemplo 1
-
-```{r}
-
-# Defining vector
-x <- c(3, 7, 5, 13, 20, 23, 39, 23, 40, 23, 14, 12, 56, 23)
-
-# Print mean
-print(mean(x))
-```
-
  
- Explicación tabla de frecuancia.
  
 ```{r}
 # Defining vector
@@ -62,16 +119,61 @@ y <- table(x)
 # Print frequency table
 print(y)
 
-# Mode of x
-m <- names(y)[which(y == max(y))]
-
-# Print mode
-print(m)
-
 ```
 
+## Moda
+
+```{r}
+
+# Defining vector
+x <- c(3, 7, 5, 13, 20,  39, 23, 40,
+	23, 14, 12, 56, 23, 29, 56, 37,
+	45, 1, 25, 8, 56, 56)
+
+# Generate frequency table
+y <- table(x)
+
+# Print frequency table
+print(y)
+
+# Mode of x
+
+moda <- names(y)[which(y == max(y))]
+
+# Print mode
+print(moda)
+```
 
  
+### Media
+
+[Notación](https://www.geeksforgeeks.org/central-tendency-in-r-programming/#:~:text=Central%20Tendency%20is%20one%20of,centre%20value%20of%20the%20distribution.)
+
+Ejemplo  2
+
+```{r}
+
+# Defining vector
+x <- c(3, 7, 5, 13, 20, 23, 39, 23, 40, 23, 14, 12, 56, 23)
+
+# Print mean
+print(mean(x))
+```
+
+### Mediana.
+
+Una medida de tendencia central que es util cuando los datos tienen sesgo, ej. cuando la media y la mediana no son iguales.
+ 
+Ejemplo 3
+
+```{r}
+ # Defining vector
+x <- c(3, 7, 5, 13, 20, 23, 39,
+	23, 40, 23, 14, 12, 56, 23)
+
+# Print Median
+median(x)
+```
 
 
 ### Ejempo 1 Estimación de medidas de tendencia central básicas. 
@@ -115,8 +217,17 @@ glimpse(graduados)
 # Visualización  Scatter con trend para  4 features.  X= Proporcion mujeres/hombres por categoria, Y=mediana del salario, Categoria en color y otra Categoria en point size.
 
 ## Observamos variables numéricas, (denotadas int o dbl según sean numeros enteros o decimales), categóricas (denotadas fct).  Otro tipo de datos que no esta presente paro es comun es chr, (string de texto, ejemplo nombre de países, calles, etc.)
- 
-  g<-ggplot(graduados,aes(ShareWomen,Median, color=Area,size=Sample_size, label=Major))+
+
+
+# Alternativa  para conocer la estructura de datos. Desventaja si son muchas variables es una gran tabla. 
+
+str(graduados)
+
+# Medidas de tendencia central y estadistica descriptiva básica.
+summary(graduados)
+
+
+ g<-ggplot(graduados,aes(ShareWomen,Median, color=Area,size=Sample_size, label=Major))+
   geom_point()+
   geom_smooth(aes(group=1),method = "lm")+
   expand_limits(y=0)+
