--- a/content/english/blog/post-2.Rmd
+++ b/content/english/blog/post-2.Rmd
@@ -382,6 +382,151 @@ sample(1:6,1)
 
 
 
+Si necesitamos conocer los nombres de los argumentos de alguna funciòn pasamos el nombre de la funciona la funciòn `args()`, Ejemplo  `args(round)` 
+
+
+```{r}
+args(round)
+```
+
+**Note** que las funciones incluyen valores predeterminados para algunos argumentos, en el caso anterior el valor del argumento *digits* es 0, de modo que si omitimos este argumento, el resultado será el redondeo al entero próximo, sin decimales. 
+
+```{r}
+# Redondeo con dos digitos 
+round(3.1416,2)
+# Redondeo con un digito
+round(3.1416,1)
+
+# redondeo con parametro predeterminado.
+round(3.1416)
+
+```
+## Muestreo con reemplazo.
+
+Cuando aplicamos la función `sample(dado, size = 2)` notemos que nunca obtenemos dos veces el mismo valor, esto es la función de forma predeterminada considera una muestra aleatoria pero sin reemplazo, para evitar este comportamiento y poder simular el lanzamiento de un dado en realidad en donde podemos obtener por ejemplo el valor 3 y luego otro 3, es necesario inlcuir el argumeto `replace = TRUE`, esto permite que una vez que lanzamos el primer dado, sea posible obtener el mismo valor en el segundo lanzamiento, tal como sucede en el caso real.
+
+
+```{r}
+sample(dado, size = 2, replace = TRUE)
+```
+
+El muestreo con reemplazo es una manera fácil de crear muestras aleatorias simples. POr ejemplo simular correctamente el lanzamiento de un dado en el que obtenemos un numero aleatorio  independiente cada vez. 
+
+
+Si deseas sumar el valor del dado para los dos lanzamientos, unicametne aplicamos la función de suma y tenemos el resultado de esta simulación con números aleatorios. 
+
+```{r}
+dados <- sample(dado, size = 2, replace = TRUE)
+dados
+
+dadosuma<-sum(dados)
+dadosuma
+```
+
+Qué pasaria si indicamos el valor de *dados* varias veces, cambiará el valor obtenido cada vez que indicamos el nombre del objeto?
+
+```{r}
+dados
+
+dados
+
+dados 
+```
+
+Vemos que no obtenemos una nueva muestra aleatoria cada vez que indicamos el nombre del objeto, esto es lo que esperamos ya que una vez que aplicamos una función a un conjunto de argumentos y asignamos un nombre creamos un objeto y al llamarlo obtenemos el  resultado permanentemente.
+
+Si queremos obtener un resultado distinto cada vez que lanzamos el dado podemos especificarlo por medio de una funciòn. 
+
+## Escribe tus propias funciones.
+
+
+Hasta ahora hemos creado estos objetos:
+
+`dado<-1:6`  
+
+`dados<-(dado,2,replace=TRUE)`
+
+`sum(dados)`
+
+No sería conveniente que escribiésemos estos objetos cada vez que necesitamos el resultado del lanzamiento. Para simplificar este proceso podemos construir una función que haga el trabajo por nosotros de manera automática.
+
+Hagamos una funciòn llama `lanzar()`, esta función nos permitirá tener un el valor nuevo  para cada vez que lancemos los dados, sin tener que reescribir cada objeto. 
+
+
+**Every function in R has three basic parts:** a **name**, **a body of code**, and **a set of arguments**.
+
+To make your own function, you need to replicate these parts and store them in an R
+object, which you can do with the *function* function. To do this, call function() and
+follow it with a pair of **braces**, {}:
+
+`mi_función <- function() {}`
+
+```{r}
+lanzar <- function() {
+dado <- 1:6
+dados <- sample(dado, size = 2, replace = TRUE)
+sum(dados)
+}
+
+lanzar()
+```
+
+## Argumentos
+
+Ahora vamos a incluir  argumentos a nuestra función.
+Veamos que sucede cuando incluimos un objeto que no hemos definido, llamémos a este elemento  **tipo**, en lugar del objeto $dado<-1:6$. 
+
+```{r}
+lanzar2 <- function() {
+dados <- sample(tipo, size = 2, replace = TRUE)
+sum(dados)
+}
+```
+
+`lanzar2()`
+
+Obtenemos un error: **Error: object 'lanzar2' not found**. esto debido a que no existe el objeto **tipo**.
+
+Este comportamiento de hecho nos permite incluir argumentos, para aplicar la función lo único que necesitamos hacer es indicar este elemento (tipo) como argumento. Al incluir argumentos en nuestra función, podemos en nuestro ejemplo, especificar diferentes tipos de **dados**. 
+
+Recordemos que estamos haciendo dos lanzamientos con un dato de 6 lados, pero podemos especificar otros tipos de dados, como uno con 20 lados, uno con 4 o 3,etc. Esta información la indicamos mediante los argumentos.
+
+```{r}
+lanzar2 <- function(tipo) {
+dados <- sample(tipo, size = 2, replace = TRUE)
+sum(dados)
+}
+
+lanzar2(tipo=1:4)
+lanzar2(tipo=1:20)
+lanzar2(1:6)
+lanzar2(tipo)
+```
+
+Note que no es necesario nombrar tipo explicitamente, aunque lo podemos hacer para mayor claridad, esto no es necesario por que  tipo es el único argumento de nuestra función `lanzar2()`.
+
+Note que la función resulta en un Error, cuando no proporcionamos  el argumento tipo  ej. `lanzar2()`. Esto es interesante por que de hecho podemos especificar **argumentos predeterminados** al momento de construir la función de tal forma que podemos dejar vacio este espacio cuando estimamos la función. 
+
+```{r}
+lanzar2 <- function(tipo=1:6) {
+dados <- sample(tipo, size = 2, replace = TRUE)
+sum(dados)
+}
+
+lanzar2()
+
+lanzar2(1:12)
+```
+
+Ahora cuando llamamos la función, obtenemos la información solicitada!
+
+Ahora es posible proporcionar un tipo de dado particular cada vez que lanzamos el dado o bien si preferimos dejar el argumento en blanco y la función aplicará el valor predeterminado para el argumento tipo.
+
+
+En síntesis el proceso para crear una función involucra las siguientes partes:
+
+![](images/blog/Funciones.jpg)
+
 
 
 ### Frecuencia.
