--- a/content/english/blog/post-2.Rmd
+++ b/content/english/blog/post-2.Rmd
@@ -5,10 +5,8 @@ date: 2022-03-01T21:13:14-05:00
 categories: ["R"]
 tags: ["R Markdown", "plot", "regression"]
 mathjax: true
-output:
-  md_document:
-    variant: markdown_github
-
+image: "images/blog/post-1.jpg"
+draft: false
 ---
 
 
