--- a/content/english/blog/post-2.Rmd
+++ b/content/english/blog/post-2.Rmd
@@ -2,6 +2,7 @@
 title: "Viernes 9 Sep"
 author: "JLMR"
 date: 2022-03-01T21:13:14-05:00
+type: "regular"
 categories: ["R"]
 tags: ["R Markdown", "plot", "regression"]
 mathjax: true
