--- a/content/english/blog/post-2.Rmd
+++ b/content/english/blog/post-2.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "Viernes 9 Sep"
+title: "Sesion 2. Viernes 9 Sep"
 author: "JLMR"
 date: 2022-03-01T21:13:14-05:00
 type: "regular"
 categories: ["R"]
 tags: ["R Markdown", "plot", "regression"]
 mathjax: true
-image: "images/blog/post-1.jpg"
+image: "images/blog/posta.jpg"
 draft: false
 ---
 
