--- a/content/english/blog/post-2.Rmd
+++ b/content/english/blog/post-2.Rmd
@@ -12,6 +12,6 @@ draft: false
 
 *Character is the architect of achievements*
 
-[Entra a la clase aquí](https://stat2022-01.netlify.app/sesion-2-viernes-9-sep/)
+[Entra a la clase aquí]()
 
 
